--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       </ul>
     </div> -->
     <div class="tabs__content">
-      <div id="All1" class="tabs__content-item">1111111111111111111111111111111111</div>
-      <div id="Mersedes" class="tabs__content-item">22222222222222222222222222222222222222222</div>
-      <div id="BMW" class="tabs__content-item">333333333333333333333333333333333333333333333333</div>
-      <div id="Audi" class="tabs__content-item">444444444444444444444444444444444444444444444444444444444</div>
-      <div id="Toyota" class="tabs__content-item">555555555555555555555555555555555555555555555555555555555555555555555</div>
+      <div id="All1" class="tabs__content-item">1111</div>
+      <div id="Mersedes" class="tabs__content-item">2222</div>
+      <div id="BMW" class="tabs__content-item">3333</div>
+      <div id="Audi" class="tabs__content-item">4444</div>
+      <div id="Toyota" class="tabs__content-item">5555</div>
     </div>
   </div>
 
@@ -61,11 +61,11 @@
       </ul>
     </div> -->
     <div class="tabs__content">
-      <div id="All2" class="tabs__content-item">aaaaa</div>
-      <div id="Opel" class="tabs__content-item">bbbbb</div>
-      <div id="Rolls-Rolls" class="tabs__content-item">cccc</div>
-      <div id="Aston-Martin" class="tabs__content-item">dddd</div>
-      <div id="Citroen" class="tabs__content-item">eeee</div>
+      <div id="All2" class="tabs__content-item">AAAA</div>
+      <div id="Opel" class="tabs__content-item">BBBB</div>
+      <div id="Rolls-Rolls" class="tabs__content-item">CCCC</div>
+      <div id="Aston-Martin" class="tabs__content-item">DDDD</div>
+      <div id="Citroen" class="tabs__content-item">EEEE</div>
     </div>
   </div>
 </body>
