--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  <!-- many blocks -->
+  <!-- one or many blocks -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
