--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     </div>
   </div>
 
+<!-- next block -->
+
   <div class="tabs">
     <!-- <div class="tabs__navigation">
       <ul class="tabs__list">
