--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
     </div>
   </div>
 
-<!-- next block 2
-
--->
+<!-- next block 2 -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
