--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     </div>
   </div>
 
-<!-- next block 2 d-->
+  
+<!-- next block 22 -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
