--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-<!-- next block 2d -->
+<!-- next block 12 -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
