--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     </div>
   </div>
 
-<!-- next block -->
+<!-- next block 1 -->
+<!-- next block 2 -->
+<!-- next block 3 -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
