--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <!-- next block 1 -->
 <!-- next block 2 -->
+<!-- next block 3 -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
