--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-<!-- next block -->
+<!-- next block and any -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
