edit html comment

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-<!-- next block and any 1 -->
+<!-- next block and -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
