--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
   </div>
 
 <!-- next block -->
+<!-- next block -->
+<!-- next block -->
+<!-- next block -->
+<!-- next block -->
 
   <div class="tabs">
     <!-- <div class="tabs__navigation">
